# GraphicHandler

./: CMakeLists.txt
Include/: Canvas.hpp
Include/Color/: RGB.h
Include/Color/Interface/: IColor.h
Include/System/: ErrorCode.h
Source/: CMakeLists.txt  RGB.cpp  main.cpp
